--- a/g5Mindr/g5Mindr/ViewControllers/MDREmoticonSelection.storyboard
+++ b/g5Mindr/g5Mindr/ViewControllers/MDREmoticonSelection.storyboard
@@ -8,7 +8,7 @@
         <!--Delegate-->
         <scene sceneID="b37-gf-waY">
             <objects>
-                <viewController id="rA8-u7-l50" customClass="g5EmoticonSelectionViewController" sceneMemberID="viewController">
+                <viewController id="rA8-u7-l50" customClass="MDREmoticonSelectionViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="FeR-lI-8wg"/>
                         <viewControllerLayoutGuide type="bottom" id="0D9-QK-Yzf"/>
@@ -24,7 +24,7 @@
                                 <rect key="frame" x="0.0" y="50" width="600" height="550"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <connections>
-                                    <segue destination="v6Q-1b-hWR" kind="embed" id="BOx-fg-mPz"/>
+                                    <segue destination="v6Q-1b-hWR" kind="embed" identifier="embed_emoticon_page_view_controller" id="BOx-fg-mPz"/>
                                 </connections>
                             </containerView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iJO-uF-JAL" userLabel="Header">
@@ -100,6 +100,85 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Gb5-WL-DtU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1320" y="-52"/>
+        </scene>
+        <!--Emoticon Collection View Controller-->
+        <scene sceneID="Arv-ko-KKu">
+            <objects>
+                <collectionViewController storyboardIdentifier="collection_vc" id="mYf-6w-tz5" customClass="MDREmoticonCollectionViewController" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="0Xm-iA-uPg">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Upg-nz-WKd">
+                            <size key="itemSize" width="106" height="106"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="emoticon_cell" id="er1-ha-noW" customClass="g5EmoticonCell">
+                                <rect key="frame" x="0.0" y="0.0" width="106" height="106"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="106" height="106"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9yp-Yn-Ugk" userLabel="Outer Ring">
+                                            <rect key="frame" x="15" y="15" width="76" height="76"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="76" id="1gC-qb-lKS"/>
+                                                <constraint firstAttribute="height" constant="76" id="bVd-HU-rpG"/>
+                                            </constraints>
+                                        </imageView>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SMU-r6-Wiy" userLabel="Inner Ring">
+                                            <rect key="frame" x="26" y="26" width="54" height="54"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="54" id="ZfQ-Yn-aQM"/>
+                                                <constraint firstAttribute="width" constant="54" id="y26-Zc-uku"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rbA-hf-tde">
+                                            <rect key="frame" x="33" y="33.5" width="40" height="40"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="40" id="Egl-JQ-uKo"/>
+                                                <constraint firstAttribute="width" constant="40" id="vAI-dl-B1P"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="9yp-Yn-Ugk" firstAttribute="centerX" secondItem="er1-ha-noW" secondAttribute="centerX" id="DAe-px-PYP"/>
+                                    <constraint firstItem="SMU-r6-Wiy" firstAttribute="centerY" secondItem="9yp-Yn-Ugk" secondAttribute="centerY" id="Lp6-Fz-nro"/>
+                                    <constraint firstItem="9yp-Yn-Ugk" firstAttribute="centerY" secondItem="er1-ha-noW" secondAttribute="centerY" id="SLO-sN-cCg"/>
+                                    <constraint firstItem="rbA-hf-tde" firstAttribute="centerX" secondItem="er1-ha-noW" secondAttribute="centerX" id="SLy-uL-FRf"/>
+                                    <constraint firstItem="rbA-hf-tde" firstAttribute="centerY" secondItem="er1-ha-noW" secondAttribute="centerY" id="VLg-hB-Pza"/>
+                                    <constraint firstItem="SMU-r6-Wiy" firstAttribute="centerX" secondItem="9yp-Yn-Ugk" secondAttribute="centerX" id="uOA-HB-tul"/>
+                                </constraints>
+                                <size key="customSize" width="106" height="106"/>
+                                <connections>
+                                    <outlet property="emoticonLabel" destination="rbA-hf-tde" id="ZgU-Re-NUD"/>
+                                    <outlet property="innerRingImageView" destination="SMU-r6-Wiy" id="bkN-Zj-N1F"/>
+                                    <outlet property="outerRingImageView" destination="9yp-Yn-Ugk" id="IEz-he-TN0"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="mYf-6w-tz5" id="Igo-Tc-iZb"/>
+                            <outlet property="delegate" destination="mYf-6w-tz5" id="dDH-SB-OTZ"/>
+                        </connections>
+                    </collectionView>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bKH-Th-xaa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2021" y="622"/>
         </scene>
         <!--Page View Controller-->
         <scene sceneID="hwp-ft-Ljm">
