Allowing the lines on the conditions labels to wrap

--- a/g5Mindr/g5Mindr/Cells/g5ConditionTableViewCell.xib
+++ b/g5Mindr/g5Mindr/Cells/g5ConditionTableViewCell.xib
@@ -16,7 +16,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="99.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="99"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" alpha="0.050000000000000003" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iF5-5Z-djt" userLabel="Background Image">
@@ -37,14 +37,19 @@
                             <constraint firstAttribute="width" constant="40" id="b8b-P9-qDn"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ga2-Lj-lva" userLabel="Label - Title">
-                        <rect key="frame" x="75" y="42" width="40" height="16"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ga2-Lj-lva" userLabel="Label - Title">
+                        <rect key="frame" x="68" y="8" width="166" height="90"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="16" id="aBe-Oz-kcw"/>
                         </constraints>
                         <fontDescription key="fontDescription" name="ProximaNovaSoftW03-Bold" family="ProximaNovaSoftW03-Bold" pointSize="16"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="aBe-Oz-kcw"/>
+                            </mask>
+                        </variation>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MSn-1X-6ND" customClass="BuoyToggleView">
                         <rect key="frame" x="250" y="35" width="50" height="30"/>
@@ -65,17 +70,20 @@
                 <constraints>
                     <constraint firstItem="wb7-sG-iys" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="12" id="1sF-lx-p73"/>
                     <constraint firstItem="iF5-5Z-djt" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="4c7-fX-FOW"/>
-                    <constraint firstItem="Ga2-Lj-lva" firstAttribute="leading" secondItem="wb7-sG-iys" secondAttribute="trailing" constant="15" id="5Q8-3h-fJ9"/>
+                    <constraint firstItem="Ga2-Lj-lva" firstAttribute="leading" secondItem="wb7-sG-iys" secondAttribute="trailing" constant="8" symbolic="YES" id="5Q8-3h-fJ9"/>
                     <constraint firstAttribute="bottom" secondItem="aTM-A0-geK" secondAttribute="bottom" id="CC3-Iq-0bV"/>
                     <constraint firstItem="iF5-5Z-djt" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Di4-Sh-Xqj"/>
+                    <constraint firstItem="QvU-aJ-30c" firstAttribute="leading" secondItem="Ga2-Lj-lva" secondAttribute="trailing" constant="16" id="IKf-f0-yfd"/>
                     <constraint firstItem="wb7-sG-iys" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="KVj-CP-5DK"/>
                     <constraint firstItem="QvU-aJ-30c" firstAttribute="height" secondItem="MSn-1X-6ND" secondAttribute="height" id="Kb5-VJ-tQ0"/>
                     <constraint firstAttribute="trailing" secondItem="iF5-5Z-djt" secondAttribute="trailing" id="Mew-hg-hBI"/>
                     <constraint firstItem="wb7-sG-iys" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="PNG-Ty-shB"/>
                     <constraint firstItem="QvU-aJ-30c" firstAttribute="centerX" secondItem="MSn-1X-6ND" secondAttribute="centerX" id="U2T-Tg-McC"/>
+                    <constraint firstItem="Ga2-Lj-lva" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="WWE-7Y-KJN"/>
                     <constraint firstItem="aTM-A0-geK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="XVV-ih-lwe"/>
                     <constraint firstItem="MSn-1X-6ND" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Y7x-ng-4cr"/>
                     <constraint firstItem="QvU-aJ-30c" firstAttribute="centerY" secondItem="MSn-1X-6ND" secondAttribute="centerY" id="cma-1n-nwW"/>
+                    <constraint firstItem="aTM-A0-geK" firstAttribute="top" secondItem="Ga2-Lj-lva" secondAttribute="bottom" id="oQd-GP-1em"/>
                     <constraint firstItem="Ga2-Lj-lva" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="qh4-vP-0Kq"/>
                     <constraint firstItem="QvU-aJ-30c" firstAttribute="width" secondItem="MSn-1X-6ND" secondAttribute="width" id="wqN-9J-0Sd"/>
                     <constraint firstAttribute="trailing" secondItem="aTM-A0-geK" secondAttribute="trailing" id="xfp-Sg-Rjo"/>
@@ -85,6 +93,7 @@
                 <variation key="default">
                     <mask key="constraints">
                         <exclude reference="1sF-lx-p73"/>
+                        <exclude reference="qh4-vP-0Kq"/>
                     </mask>
                 </variation>
             </tableViewCellContentView>
